# bridge

./: .gitignore  Cargo.toml  Makefile  README.md  build.ps1  build.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: candidate.yml  ci.yml  release.yml
config/: default.toml
config/devices/: teensy.toml
scripts/: _admin.sh  bridge.sh  build.sh  install.sh  logs.sh  ports.sh  restart.sh  service-start.sh  start.sh  status.sh  stop.sh  uninstall.sh
src/: app.rs  bridge_state.rs  cli.rs  config.rs  constants.rs  control.rs  elevation.rs  error.rs  input.rs  instance_lock.rs  main.rs  operations.rs  popup.rs
src/app/: commands.rs  logs.rs  mod.rs  mode_settings.rs  operations.rs  popup.rs  state.rs
src/bridge/: guard.rs  log_broadcast.rs  log_receiver.rs  mod.rs  protocol.rs  runner.rs  session.rs  stats.rs  stream_parser.rs  udp.rs
src/codec/: cobs.rs  cobs_debug.rs  mod.rs  oc_log.rs  raw.rs
src/logging/: broadcast.rs  entry.rs  file.rs  filter.rs  mod.rs  receiver.rs  store.rs
src/platform/: mod.rs  windows.rs
src/serial/: cobs.rs  mod.rs
src/service/: linux.rs  mod.rs  windows.rs
src/transport/: mod.rs  serial.rs  udp.rs  websocket.rs
src/ui/: mod.rs  theme.rs
src/ui/widgets/: actions.rs  log.rs  mod.rs  mode.rs  status.rs
tests/: integration_test.rs
