[package]
name = "open-control-bridge"
version = "0.1.0"
edition = "2021"
authors = ["miu-lab"]
description = "Serial-to-UDP bridge for open-control framework"
license = "MIT"
repository = "https://github.com/miu-lab/open-control"

[[bin]]
name = "oc-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal"] }
socket2 = "0.5"
serialport = "4"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
