[package]
name = "open-control-bridge"
version = "0.1.0"
edition = "2021"
authors = ["miu-lab"]
description = "Serial-to-UDP bridge for open-control framework"
license = "MIT"
repository = "https://github.com/miu-lab/open-control"

[[bin]]
name = "oc-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal"] }
socket2 = "0.5"
serialport = "4"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arboard = "3"
toml = "0.8"
bytes = "1.5"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-services = "0.26"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_Devices_Communication",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
